# recover-folder-structure

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  main.py  mypy.ini  pyproject.toml
config/: settings.py  urls.py
config/config/: settings.py
student_management/: models.py
student_management.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
student_management/custom/: custom_api_exception.py  custom_response.py
student_management/migrations/: 0001_initial.py  0002_alter_student_email.py  0003_course_alter_student_course.py  0004_alter_course_options_alter_student_options_and_more.py
student_management/repository/: admin_repository.py  course_repository.py  student_repository.py
student_management/tests/: base.py  conftest.py  test_auth.py  test_course.py  test_public_permission.py  test_student.py
student_management/v1/: urls.py
student_management/v1/serializers/: admin_serializer.py  auth_serializer.py  course_serializer.py  student_serializer.py
student_management/v1/services/: admin_service.py  course_service.py  student_service.py
student_management/v1/views/: admin_view.py  auth_view.py  course_view.py  student_view.py
