[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-management"
version = "0.1.0"
description = "Django Student Management System"
requires-python = ">=3.12"
dependencies = [
    "Django>=4.2",
    "djangorestframework>=3.14",
    "djangorestframework-simplejwt>=5.5.1",
    "pre-commit>=4.5.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "django-stubs>=4.2",
    "types-requests>=2.31.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "migrations",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["student_management", "config"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.setuptools.packages.find]
include = ["config", "student_management"]
